Update home.md Liangjialing/hugoAnatoleProject@f18602600e48d5cf3e68870926ae7af0b45b8713

--- a/home/index.html
+++ b/home/index.html
@@ -196,7 +196,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/home\/",
-        "wordCount" : "193",
+        "wordCount" : "13",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -416,12 +416,7 @@
       <h1></h1>
       <h1 id="hi">Hi,</h1>
 <p>I’m a PhD student at Universitat Pompeu Fabra, supervised by <a href="https://www.upf.edu/web/mcnally">Louise McNally</a>.</p>
-<p style="text-align:justify">
-I kicked off my PhD journey by diving into the relatively uncharted waters of Chinese Verbal Classifiers (VCL). This fascination was more intuitive than rational—something about VCL just seemed inherently interesting to me. Turns out, with such a scant crowd working in what I wanted to do, my thesis background chapter looked dangerously empty. So I pivoted to Chinese Nominal Classifiers. This shift wasn’t just about filling pages; it was about building on solid ground, where others had laid some foundations. As for my research direction, well, there was a bit of a plot twist. Despite my supervisor being a brilliant semanticist (and me having the utmost respect for her), I found my academic interests veering towards cognitive linguistics and psycholinguistics. There's something thrilling about exploring how language shapes human behaviour and how our brains sometimes deceive us.
-</p>
-<p style="text-align:justify">
-My current research? Investigating how classifiers affect our naming choices at the taxonomic level-an intriguing issue that continually prompts the question, “Why?" I'm still piecing together the reasons behind these patterns and if you know the possible WHY, please contact me asap!
-</p></div>
+</div>
     <div class="post__footer">
       
 
