Update home.md Liangjialing/hugoAnatoleProject@263aa251a0c21a1ea38a0badae99ae8d94987672

--- a/english/home/index.html
+++ b/english/home/index.html
@@ -196,7 +196,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/english\/home\/",
-        "wordCount" : "13",
+        "wordCount" : "87",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -414,6 +414,12 @@
       <h1></h1>
       <h1 id="hi">Hi,</h1>
 <p>I’m a PhD student at Universitat Pompeu Fabra, supervised by <a href="https://www.upf.edu/web/mcnally">Louise McNally</a>.</p>
+<p style="text-align:justify">
+I started my PhD journey with Chinese Verbal Classifiers (VCL), Then I shifted to the Nominal classifiers (NCL), but I'll return to my VCL sometime when I complete the current project.
+</p>
+<p style="text-align:justify">
+My current research? Investigating how nominal classifiers affect people's naming choices at the taxonomic level - an intriguing issue that continually prompts the question, "Why?" I'm still piecing together the reasons behind these patternsand if you know the possible WHY，please contact me asap!
+</p>
 </div>
     <div class="post__footer">
       
