--- a/english/gallery/index.html
+++ b/english/gallery/index.html
@@ -502,6 +502,7 @@
 
 <div id="slide-window">
     <ol id="slides-list">
+                <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/IMG_1370.jpeg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0001.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0002.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0003.jpg);"></li>
