--- a/gallery/index.html
+++ b/gallery/index.html
@@ -503,12 +503,12 @@
 
 <div id="slide-window">
     <ol id="slides-list">
-                <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/IMG_1370.jpeg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0001.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0002.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0003.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0004.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0005.jpg);"></li>
+                <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0006.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image0008.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image1001.jpg);"></li>
                 <li class="slide" style="background-image:url(https://liangjialing.github.io/images/portfolio/image1002.jpg);"></li>
