--- a/english/home/index.html
+++ b/english/home/index.html
@@ -196,7 +196,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/english\/home\/",
-        "wordCount" : "87",
+        "wordCount" : "98",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -420,6 +420,13 @@ I started my PhD journey with Chinese Verbal Classifiers (VCL), Then I shifted t
 <p style="text-align:justify">
 My current research? Investigating how nominal classifiers affect people's naming choices at the taxonomic level - an intriguing issue that continually prompts the question, "Why?" I'm still piecing together the reasons behind these patternsand if you know the possible WHY，please contact me asap!
 </p>
+<div class="post__footer"></div>
+<h1 id="news">NEWS</h1>
+<ul>
+<li>this is the first news</li>
+<li>this is second</li>
+<li>third one</li>
+</ul>
 </div>
     <div class="post__footer">
       
