--- a/english/cv/index.html
+++ b/english/cv/index.html
@@ -669,10 +669,10 @@ View the PDF file <a class="pdf-source" id="pdf-source-noscript-c7442b1f" href="
     <meta charset="UTF-8" />
   </head>
   <body>
-    <div id="app">
-      <iframe
-        src="https://drive.google.com/file/d/1zcBfcIlyHPW9wgN_bGhvplmesSpOAdVe/preview"
-        width="100%" height="550">
+    <div id="app" style="text-align: center;">
+      <iframe frameborder="no" 
+        src='https://drive.google.com/file/d/1zcBfcIlyHPW9wgN_bGhvplmesSpOAdVe/preview'
+        width='90%' height='800'>
       </iframe>
     </div>
   </body>
