update index Liangjialing/hugoAnatoleProject@b2bf211b6b995f244722e04d9cfc96fb8ad9df26

--- a/index.html
+++ b/index.html
@@ -384,16 +384,16 @@ My current research? Investigating how nominal classifiers affect people's namin
 <div class="post__footer"></div>
 <h1 id="news">NEWS</h1>
 <ul>
-<li>23/07/2024: We are going to CogSci!</li>
-<li>13/07/2024: I&rsquo;m going to participant <a href="https://linguistics.philology.uoc.gr/cssl23/">The 5th Crete Summer School of Linguistics (CreteLing)</a>, which will be held at Rethymnon, Crete!</li>
-<li>03/05/2024: Abstract accepted by <a href="https://jlao37.sciencesconf.org/">37e Journées de linguistique d’Asie orientale du CRLAO</a>!</li>
-<li>18/04/2024: I gave a presentation at <a href="https://eventum.upf.edu/111520/detail/core-project-2024-workshop-n-information-theoretic-perspectives-on-referring-expression-choice.html">the CORE workshop</a></li>
-<li>05/04/2024: Paper accepted at <a href="https://cognitivesciencesociety.org/cogsci-2024/">CogSci</a> 2024: <em>How does grammatical category influence conceptual categorization: The case of Chinese classifiers</em>, with Xixian Liao!</li>
-<li>06/10/2023: Paper accepted at <a href="https://conll.org">the SIGNLL Conference on Computational Natural Language Learning (CoNLL) 2023</a>: <em>The Impact of Familiarity on Naming Variation: A Study on Object Naming in Mandarin Chinese</em>, with Yunke He, Xixian Liao, and Gemma Boleda!</li>
-<li>26/09/2023: Presentation at <a href="https://wossp2023.univ-nantes.fr">the 19th Workshop on Syntax, Semantics and Phonology</a>:<em>An empirical study of the plural morpheme -men in Mandarin Chinese Evidence against the associative reading</em>, with Chenyuan Deng!</li>
-<li>07/2023: I&rsquo;m going to participant <a href="https://www.umass.edu/news/article/linguistics-department-host-2023-linguistic-institute-linguistic-society-america">the Linguistic Institute of the Linguistic Society of America (LSA) summer school</a> in UMass Amherst, USA!</li>
-<li>07/2022: I&rsquo;m going to participant the <a href="https://lotschool.nl/summer-winter-schools/">Landelijke Onderzoekschool Taalwetenschap (LOT) summer school</a>, which will take place in Groningen, Netherlands!</li>
-<li>09/2021-12/2022: Completed my service as co-organizer of the <a href="https://www.upf.edu/web/glif">GLiF seminar</a> with Sara Amido. Thanks to Sara, my best work partner and also thanks to all our invited speakers for delivering so many inspirational talks!</li>
+<li><strong>23/07/2024</strong>: We are going to CogSci!</li>
+<li><strong>13/07/2024</strong>: I&rsquo;m going to participant <a href="https://linguistics.philology.uoc.gr/cssl23/">The 5th Crete Summer School of Linguistics (CreteLing)</a>, which will be held at Rethymnon, Crete!</li>
+<li><strong>03/05/2024</strong>: Abstract accepted by <a href="https://jlao37.sciencesconf.org/">37e Journées de linguistique d’Asie orientale du CRLAO(JLAO37)</a>!</li>
+<li><strong>18/04/2024</strong>: I gave a presentation at <a href="https://eventum.upf.edu/111520/detail/core-project-2024-workshop-n-information-theoretic-perspectives-on-referring-expression-choice.html">the CORE workshop</a>.</li>
+<li><strong>05/04/2024</strong>: Paper accepted at <a href="https://cognitivesciencesociety.org/cogsci-2024/">CogSci 2024</a>: <em>How does grammatical category influence conceptual categorization: The case of Chinese classifiers</em>, with Xixian Liao!</li>
+<li><strong>06/10/2023</strong>: Paper accepted at <a href="https://conll.org">the SIGNLL Conference on Computational Natural Language Learning (CoNLL) 2023</a>: <em>The Impact of Familiarity on Naming Variation: A Study on Object Naming in Mandarin Chinese</em>, with Yunke He, Xixian Liao, and Gemma Boleda!</li>
+<li><strong>26/09/2023</strong>: Presentation at <a href="https://wossp2023.univ-nantes.fr">the 19th Workshop on Syntax, Semantics and Phonology</a>:<em>An empirical study of the plural morpheme -men in Mandarin Chinese Evidence against the associative reading</em>, with Chenyuan Deng!</li>
+<li><strong>07/2023</strong>: I&rsquo;m going to participant <a href="https://www.umass.edu/news/article/linguistics-department-host-2023-linguistic-institute-linguistic-society-america">the Linguistic Institute of the Linguistic Society of America (LSA) summer school</a> in UMass Amherst, USA!</li>
+<li><strong>07/2022</strong>: I&rsquo;m going to participant the <a href="https://lotschool.nl/summer-winter-schools/">Landelijke Onderzoekschool Taalwetenschap (LOT) summer school</a>, which will take place in Groningen, Netherlands!</li>
+<li><strong>09/2021-12/2022</strong>: Completed my service as co-organizer of the <a href="https://www.upf.edu/web/glif">GLiF seminar</a> with Sara Amido. Thanks to Sara, my best work partner and also thanks to all our invited speakers for delivering so many inspirational talks!</li>
 </ul>
 
     </div>
