Update home.md Liangjialing/hugoAnatoleProject@e35bb520d0ae9b2996cc9bcbbc2d99533c35ffa4

--- a/home/index.html
+++ b/home/index.html
@@ -197,7 +197,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/home\/",
-        "wordCount" : "296",
+        "wordCount" : "306",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -422,6 +422,9 @@ I started my PhD journey with Chinese Verbal Classifiers (VCL), Then I shifted t
 </p>
 <p style="text-align:justify">
 My current research? Investigating how nominal classifiers affect people's naming choices at the taxonomic level - an intriguing issue that continually prompts the question, "Why?" I'm still piecing together the reasons behind these patternsand if you know the possible WHY，please contact me asap!
+</p>
+<p style="text-align:justify">
+Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Language production
 </p>
 <div class="post__footer"></div>
 <h1 id="news">NEWS</h1>
