--- a/english/home/index.html
+++ b/english/home/index.html
@@ -198,7 +198,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/english\/home\/",
-        "wordCount" : "296",
+        "wordCount" : "306",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -421,6 +421,9 @@ I started my PhD journey with Chinese Verbal Classifiers (VCL), Then I shifted t
 </p>
 <p style="text-align:justify">
 My current research? Investigating how nominal classifiers affect people's naming choices at the taxonomic level - an intriguing issue that continually prompts the question, "Why?" I'm still piecing together the reasons behind these patternsand if you know the possible WHY，please contact me asap!
+</p>
+<p style="text-align:justify">
+Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Language production
 </p>
 <div class="post__footer"></div>
 <h1 id="news">NEWS</h1>
