Update _index.md Liangjialing/hugoAnatoleProject@378340893e21bebe2b5a225c4a12a25d0c3f54eb

--- a/english/index.html
+++ b/english/index.html
@@ -115,7 +115,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://liangjialing.github.io/images/site-feature-image.png">
   <meta name="twitter:title" content="My blog">
-  <meta name="twitter:description" content="Hi, I’m a PhD student at Universitat Pompeu Fabra, supervised by Louise McNally.">
+  <meta name="twitter:description" content="Hello! I’m a PhD student at Universitat Pompeu Fabra, supervised by Louise McNally.">
       <meta name="twitter:site" content="@username">
 
 
@@ -124,7 +124,7 @@
   <meta property="og:url" content="https://liangjialing.github.io/english/">
   <meta property="og:site_name" content="My blog">
   <meta property="og:title" content="My blog">
-  <meta property="og:description" content="Hi, I’m a PhD student at Universitat Pompeu Fabra, supervised by Louise McNally.">
+  <meta property="og:description" content="Hello! I’m a PhD student at Universitat Pompeu Fabra, supervised by Louise McNally.">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
     <meta property="og:image" content="https://liangjialing.github.io/images/site-feature-image.png">
