Update home.md Liangjialing/hugoAnatoleProject@455b70d2af1794bd7203017c160f0e8b41ca8aad

--- a/english/home/index.html
+++ b/english/home/index.html
@@ -198,7 +198,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/english\/home\/",
-        "wordCount" : "375",
+        "wordCount" : "370",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -431,7 +431,7 @@ Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Langu
 <li><strong>23/07/2024</strong>: We are going to CogSci!</li>
 <li><strong>13/07/2024</strong>: I&rsquo;m going to participant in <a href="https://linguistics.philology.uoc.gr/cssl23/">The 5th Crete Summer School of Linguistics (CreteLing)</a>, which will be held at Rethymnon, Crete!</li>
 <li><strong>05/07/2024</strong>: I&rsquo;m going to JLAO 37th! See you in room 4.14, Inalco – 65 rue des Grands Moulins, Paris on the 5th of July from 14:30 to 15:00 for the oral presentation of Taxonomic level of categorization influences classifier choice!</li>
-<li><strong>14/06/2024</strong>: Our paper: <em>How does grammatical category influence conceptual categorization: The case of Chinese classifiers</em> has come out! You can find it <a href="https://escholarship.org/uc/item/94x3x389">here</a>!</li>
+<li><strong>14/06/2024</strong>: Our paper: <a href="https://escholarship.org/uc/item/94x3x389"><em>How does grammatical category influence conceptual categorization: The case of Chinese classifiers</em></a> has come out!</li>
 <li><strong>03/05/2024</strong>: Abstract accepted by <a href="https://jlao37.sciencesconf.org/">37e Journées de linguistique d’Asie orientale du CRLAO</a>!</li>
 <li><strong>18/04/2024</strong>: I gave a presentation at <a href="https://eventum.upf.edu/111520/detail/core-project-2024-workshop-n-information-theoretic-perspectives-on-referring-expression-choice.html">the CORE workshop</a></li>
 <li><strong>05/04/2024</strong>: Paper accepted at <a href="https://cognitivesciencesociety.org/cogsci-2024/">CogSci</a> 2024: <em>How does grammatical category influence conceptual categorization: The case of Chinese classifiers</em>, with Xixian Liao!</li>
