update news Liangjialing/hugoAnatoleProject@e6dcb36c9d7c4c119b9747e05ac84b8c7e2d0f8a

--- a/english/home/index.html
+++ b/english/home/index.html
@@ -198,7 +198,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/english\/home\/",
-        "wordCount" : "370",
+        "wordCount" : "378",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -428,6 +428,7 @@ Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Langu
 <div class="post__footer"></div>
 <h1 id="news">NEWS</h1>
 <ul>
+<li><strong>29/11/2024</strong>: I gave a presentation at <a href="https://www.upf.edu/es/web/ur-linguistica/workshops">UR-Ling workshop</a>.</li>
 <li><strong>23/07/2024</strong>: We are going to CogSci!</li>
 <li><strong>13/07/2024</strong>: I&rsquo;m going to participant in <a href="https://linguistics.philology.uoc.gr/cssl23/">The 5th Crete Summer School of Linguistics (CreteLing)</a>, which will be held at Rethymnon, Crete!</li>
 <li><strong>05/07/2024</strong>: I&rsquo;m going to JLAO 37th! See you in room 4.14, Inalco – 65 rue des Grands Moulins, Paris on the 5th of July from 14:30 to 15:00 for the oral presentation of Taxonomic level of categorization influences classifier choice!</li>
