--- a/home/index.html
+++ b/home/index.html
@@ -197,7 +197,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/home\/",
-        "wordCount" : "378",
+        "wordCount" : "388",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -429,6 +429,7 @@ Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Langu
 <div class="post__footer"></div>
 <h1 id="news">NEWS</h1>
 <ul>
+<li><strong>11/01/2025</strong>: I gave a presentation at <a href="https://sites.google.com/view/snulingsym1">1st SNU Linguistics Symposium</a>.</li>
 <li><strong>29/11/2024</strong>: I gave a presentation at <a href="https://www.upf.edu/es/web/ur-linguistica/workshops">UR-Ling workshop</a>.</li>
 <li><strong>23/07/2024</strong>: We are going to CogSci!</li>
 <li><strong>13/07/2024</strong>: I&rsquo;m going to participant in <a href="https://linguistics.philology.uoc.gr/cssl23/">The 5th Crete Summer School of Linguistics (CreteLing)</a>, which will be held at Rethymnon, Crete!</li>
