--- a/english/home/index.html
+++ b/english/home/index.html
@@ -198,7 +198,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/english\/home\/",
-        "wordCount" : "388",
+        "wordCount" : "389",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -423,7 +423,7 @@ I started my PhD journey with Chinese verbal classifiers (VCL), then I shifted t
 My current research? Investigating how nominal classifiers affect people's naming choices at the taxonomic level - an intriguing issue that continually prompts the question, "Why?" I'm still piecing together the reasons for the patterns that I'm observing. If you have any ideas about the possible WHY，please contact me!
 </p>
 <p style="text-align:justify">
-Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Language production
+Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Language production;Pragmatic reasoning
 </p>
 <div class="post__footer"></div>
 <h1 id="news">NEWS</h1>
