cogsci Liangjialing/hugoAnatoleProject@18f116a3457e7f966c8d28ed472f952d4b6469cf

--- a/english/home/index.html
+++ b/english/home/index.html
@@ -198,7 +198,7 @@
 
     ,
         "url" : "https:\/\/liangjialing.github.io\/english\/home\/",
-        "wordCount" : "389",
+        "wordCount" : "409",
         "genre" : [ ],
         "keywords" : [ ]
     }
@@ -428,6 +428,7 @@ Key words😉: L1 lexical processing/retrieval; Chinese classifier choice; Langu
 <div class="post__footer"></div>
 <h1 id="news">NEWS</h1>
 <ul>
+<li><strong>05/04/2025</strong>: Abstract accepted at <a href="https://cognitivesciencesociety.org/cogsci-2025/">CogSci</a> 2025: <em>The Impact of Taxonomic Levels on Classifier Choice in Mandarin Chinese</em>, with Yunfang Dong!</li>
 <li><strong>11/01/2025</strong>: I gave a presentation at <a href="https://sites.google.com/view/snulingsym1">1st SNU Linguistics Symposium</a>.</li>
 <li><strong>29/11/2024</strong>: I gave a presentation at <a href="https://www.upf.edu/es/web/ur-linguistica/workshops">UR-Ling workshop</a>.</li>
 <li><strong>23/07/2024</strong>: We are going to CogSci!</li>
